--- a/Contact-me.html
+++ b/Contact-me.html
@@ -12,7 +12,7 @@
 
 <body>
   <p><strong>Phone:</strong> 314.384.6870</p>
-  <p><strong>Email:</strong> welch.stephenf@gmail.com</p>
+  <p><strong>Email:</strong> welch.stephen@gmail.com</p>
   <hr>
   <form action="mailto:aiynaiy@gmail.com" method="post" enctype="text/plain">
     <label><strong>Email:</strong></label>
