--- a/Contact-me.html
+++ b/Contact-me.html
@@ -11,10 +11,10 @@
 </h3>
 
 <body>
-  <p><strong>Phone:</strong> 314.384.6870</p>
+  <p><strong>Phone:</strong> 310.384.6870</p>
   <p><strong>Email:</strong> welch.stephen@gmail.com</p>
   <hr>
-  <form action="mailto:aiynaiy@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:arodite@gmail.com" method="post" enctype="text/plain">
     <label><strong>Email:</strong></label>
     <input type="email" name="Email" value=""><br>
     <label><strong>First Name:</strong></label>
