--- a/Work Experience.html
+++ b/Work Experience.html
@@ -20,13 +20,13 @@
     <tbody>
       <tr>
         <td><strong>June 2020 - Present</strong></td>
-        <td>DXC/Citi</td>
-        <td>If my efforts are good, I'll be out of there by this coming Fall.</td>
+        <td>Consultant USA</td>
+        <td>If my efforts are good, I'll be with friends and family having lots of fun.</td>
       </tr>
       <tr>
         <td><strong>July 2019 - November 2019</strong></td>
-        <td>Blue Cross Blue Shield - Florida Blue</td>
-        <td>Just another mistake while living here in ratched redneck Florida</td>
+        <td>Just a job</td>
+        <td>Just another job</td>
       </tr>
     </tbody>
   </table>
